# poupy

./: .dockerignore  .env-example  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  manage.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  smokeshow.yml
project/: asgi.py  settings.py  urls.py  wsgi.py
project/apps/app/: admin.py  api_urls.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
project/apps/app/api/: accounts.py
project/apps/app/migrations/: 0001_initial.py  0002_transaction_remove_income_account_delete_expanse_and_more.py  0002_transfer.py  0003_alter_transaction_type.py  0003_transfer_type.py  0004_alter_transaction_type.py  0004_remove_transaction_transaction_date_and_more.py  0005_alter_account_balance_alter_transaction_value_and_more.py
project/apps/app/serializers/: accounts.py
project/apps/app/tests/: test_account_form.py  test_app.py  test_app_urls.py  test_app_view.py  test_login.py  test_login_form.py  test_models.py  test_signup.py  test_signup_form.py  test_transaction_form.py  test_transfer_form.py  test_user_create.py
project/apps/app/tests/form_tests/: test_account_edit_form.py  test_delete_account_form.py  test_login_form.py  test_new_transaction_form.py  test_signup_form.py  test_transactions_edit_form.py  test_transfer_form.py  test_user_application_edit_form.py  test_user_application_edit_password_form.py
project/apps/app/tests/functional_tests/: test_account.py  test_app.py
project/apps/app/tests/unit_tests/: test_account_form.py  test_login_form.py  test_signup_form.py  test_transaction_form.py  test_transfer_form.py
project/apps/app/views/: accounts.py  app.py  expanse.py  income.py  login.py  settings.py  signup.py  transactions.py  transfer.py
project/apps/website/: apps.py  urls.py  views.py
project/apps/website/tests/: test_website_templates.py  test_website_urls.py  test_website_views.py
project/apps/website/tests/functional_tests/: test_website_home_page.py
project/static/css/: 404.css  base.css  header.css  root.css
project/static/css/app/: account_edit.css  accounts.css  base_edit.css  header.css  login.css  main.css  signup-and-login.css  transactions.css
project/static/css/website/: header.css  main.css
project/templates/: 404.html
project/templates/base/: signup-and-login.html
project/templates/base/app/: base.html  base_form.html  signup-and-login.html
project/templates/pages/app/: account_edit.html  accounts.html  delete_account.html  home.html  login.html  new_account.html  new_expanse.html  new_income.html  new_password.html  new_transfer.html  settings.html  signup.html  transaction_edit.html  transactions.html
project/templates/pages/website/: home.html
project/templates/partials/: head.html
project/templates/partials/app/: header.html
project/templates/partials/website/: head.html  header.html
project/utils/: browser.py  testing.py
scripts/: update_chromedriver.py
static/css/: header.css  root.css
