[tool.poetry]
name = "poupy"
version = "0.1.0"
description = "A webapp for personal budget management made with Django. "
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-debug-toolbar = "^4.2.0"
docutils = "^0.20.1"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
blue = "^0.9.1"
ruff = "^0.1.5"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
selenium = "^4.15.2"
pylint = "^3.0.2"
pylint-django = "^2.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = ['migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.blue]
extend-exclude = '(migrations/)'

[tool.pytest.ini_options]
pythonpath = "."
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = "test.py tests.py test_*.py tests_*.py *_test.py *_tests.py"
addopts = "--doctest-modules --strict-markers -v"
markers = [
    "functional_test: Run tests that are selenium based",
]

[tool.coverage.run]
branch = true
omit = ["**/*test*.py", "manage.py", "**/migrations/*", "**/project/*.py"]

[tool.coverage.html]
directory = "htmlcov"

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
test = 'pytest -m "not functional_test" -s -x --cov=project -vv'
functional-test = 'pytest -m "functional_test"'
coverage = 'coverage run -m pytest && coverage html'
pylint = 'pylint $(git ls-files "*.py") --load-plugins=pylint_django project -v --rcfile=.pylintrc --exit-zero'
pre-commit = 'task lint && python manage.py migrate && task pylint && task test && task functional-test'